@@ -1,6 +1,6 @@
 humongous==1.3.0
 mongomock==2.3.1
-pyfakefs
+pyfakefs==2.7
 pytest
 pytest-cov
 webtest
